src/test/ui/inline-asm-bad-constraint.stderr
error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:21:9
   |
LL |         asm!("" :"={rax"(rax))
   |         ^^^^^^^^^^^^^^^^^^^^^^

error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:29:9
   |
LL |         asm!("callq $0" : : "0"(foo))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0668]: malformed inline assembly
  --> $DIR/inline-asm-bad-constraint.rs:36:9
   |
LL |         asm!("addb $1, $0" : "={rax}"((0i32, rax)));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

